/*
 * $Id: ChangeLog,v 1.3814 2005/02/14 06:00:08 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-02-14 00:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/hbzlib/zipplatformcomm.cpp
   * cast so compiler selects a compare method.

2005-02-13 12:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
  * makefile.nt
    + add -D_WIN32 -DWIN32 to C flags.

2005-02-13 12:31 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/thread.h
    * define CINTERFACE to correct win32ole.prg compiling.
    * this forces a C linkage to interfaces instead of c++
    * the actual cause needs to be reviewed.
  * include/gtinfo.ch
  * source/rtl/gtwin/gtwin.c
  * source/rtl/maxrow.c
    * enable support for MaxRow/Col(GTI_CLIENT)
    * Gives the currently visible screen size.
    * If you have a console dimensions of 300 lines, MaxRow(GTI_CLIENT)
    * at startup will give the size of the window currently shown on screen.
    * so - at program startup SetMode(MaxRow(2)+1, MaxCol(2)+1) would have
    * the effect of turning off the scrollbars.

2005-02-12 17:21 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Fixed GPF trap related to #[x]untranslate and #[x]uncommand.

  * source/rtl/win32prn.prg
    + Added #include <winspool.h>

2005-02-12 20:53 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_tgz.sh
  * xharbour/bin/hb-func.sh
  * xharbour/bin/hb-mkslib.sh
    * modifications for MinGW cross compilation

  * xharbour/source/compiler/cmdcheck.c
    ! fixed parsing -DVAR="<value>" when value contains option separators

  * xharbour/source/ct/files.c
    * fixed uninitialized iAttr

  * xharbour/source/rdd/workarea.c
    * set as default Cl5.[23] behavior in
      dbCreate({..{<cField>,"C",<n1>,<n2>}..},...)

  * xharbour/source/rtl/win32prn.prg